--- a/SurvivalOfThe/Assets/WebGLTemplates/Airconsole/style.css
+++ b/SurvivalOfThe/Assets/WebGLTemplates/Airconsole/style.css
@@ -57,6 +57,35 @@ body {
     float: right;
     background-color: black;
 }
+#upper_right {
+    height: 20%;
+    width: 100%;
+    float: right;
+    background-color: black;
+}
+#lower_right {
+    height: 80%;
+    width: 100%;
+    float: right;
+    background-color: black;
+}
+.focus_button {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    background-color: #222;
+    position: relative;
+    margin-top: -6px;
+    background-color: lightsalmon;
+}
+.focus_button_label {
+    margin: auto;
+    position: relative;
+    width: 50%;
+    top: 50%;
+    margin-top: -6px;
+}
+
 .button {
     display: inline-block;
     height: 33%;
