--- a/SurvivalOfThe/Assets/WebGLTemplates/Airconsole/style.css
+++ b/SurvivalOfThe/Assets/WebGLTemplates/Airconsole/style.css
@@ -163,6 +163,11 @@ body {
 .margin {
     height: 33%;
 }
+.color {
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
+}
 .button_label {
     margin: auto;
     position: relative;
