--- a/SurvivalOfThe/Assets/WebGLTemplates/Airconsole/style.css
+++ b/SurvivalOfThe/Assets/WebGLTemplates/Airconsole/style.css
@@ -42,9 +42,16 @@ body {
 }
 .inventory_item {
 	height: 25%;
-    height: 23vh;
 	border: 1px solid black;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+    height: 23vh;
     border: 1vh solid black;
+	-webkit-background-size: contain;
+	-moz-background-size: contain;
+	-o-background-size: contain;
+	background-size: contain;
 }
 .inventory_label {
     margin: auto;
